Added create page

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,9 @@
               <div class="navbar-nav  ml-auto">
                 {% if user.is_authenticated %}
                   <a class="nav-item nav-link" href="">{{user.username}}</a>
+                  <a class="nav-item nav-link" href="{% url 'create' %}"><svg class="bi bi-plus" width="1.4em" height="1.4em" viewBox="0 0 20 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 5.5a.5.5 0 01.5.5v4a.5.5 0 01-.5.5H6a.5.5 0 010-1h3.5V6a.5.5 0 01.5-.5z" clip-rule="evenodd"></path>
+  <path fill-rule="evenodd" d="M9.5 10a.5.5 0 01.5-.5h4a.5.5 0 010 1h-3.5V14a.5.5 0 01-1 0v-4z" clip-rule="evenodd"></path>
+</svg></a>
                   <a id="logOut" class="nav-item nav-link">LogOut</a>
                   <form id="logOutForm" method="POST" action="{% url 'logout' %}">
                     {% csrf_token %}
