--- a/products/templates/products/details.html
+++ b/products/templates/products/details.html
@@ -15,15 +15,13 @@
 		<img src="{{product.image.url}}" class="img-fluid">
 	</div>
 	<div class="col-2">
-    	<a href="#">
-    		<button class="btn btn-primary btn-lg btn-block">
-	    		<svg class="bi bi-arrow-up" width="1em" height="1em" viewBox="0 0 20 25" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-					<path fill-rule="evenodd" d="M10 5.5a.5.5 0 01.5.5v9a.5.5 0 01-1 0V6a.5.5 0 01.5-.5z" clip-rule="evenodd"></path>
-					<path fill-rule="evenodd" d="M9.646 4.646a.5.5 0 01.708 0l3 3a.5.5 0 01-.708.708L10 5.707 7.354 8.354a.5.5 0 11-.708-.708l3-3z" clip-rule="evenodd"></path>
-				</svg>
-				UpVote {{product.votes_total}}
-			</button>
-		</a>
+    	<button id="upVoteBtn" class="btn btn-primary btn-lg btn-block">
+	   		<svg class="bi bi-arrow-up" width="1em" height="1em" viewBox="0 0 20 25" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd" d="M10 5.5a.5.5 0 01.5.5v9a.5.5 0 01-1 0V6a.5.5 0 01.5-.5z" clip-rule="evenodd"></path>
+				<path fill-rule="evenodd" d="M9.646 4.646a.5.5 0 01.708 0l3 3a.5.5 0 01-.708.708L10 5.707 7.354 8.354a.5.5 0 11-.708-.708l3-3z" clip-rule="evenodd"></path>
+			</svg>
+			UpVote {{product.votes_total}}
+		</button>
 	</div>
 </div>
 
@@ -41,5 +39,16 @@
 		<p>{{product.body}}</p>
 	</div>
 </div>
+
+<form id="upvote" method="POST" action="{% url 'upvote' product.id %}">
+	{% csrf_token %}
+		<input type="hidden">
+</form>
+
+<script type="text/javascript">
+	document.getElementById("upVoteBtn").onclick = function(){
+		document.getElementById("upvote").submit();
+	}
+</script>
 
 {% endblock %}
