--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-In between content
+{% for product in products %}
+  {{product.title}}
+  <br>
+{% endfor %}
 {% endblock %}
