--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,7 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-{% for product in products %}
-  {{product.title}}
-  <br>
-{% endfor %}
+<div class = "container">
+  <div class = "text-center">
+    <h1> Products </h1>
+  </div>
+  {% for product in products %}
+  <div class="border border-dark mt-5">
+    <div class = "row">
+      <div class = "col-2">
+        <a href="products/{{product.id}}"> <img src = "{{product.icon.url}}" class = "img-fluid" height="200px" width="200px"> </a>
+      </div>
+      <div class = "col-8">
+          <h2> <a href="products/{{product.id}}"> {{product.title}} </a> </h2>
+          <br>
+          <p> {{product.summary}} </p>
+      </div>
+      <div class = "col-2 ">
+        <button class="btn btn-primary btn-lg btn-block" style="position:relative; top:20px; left:-10px"> Upvote </button>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
