--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="{% static 'logo.png' %}" width="30px"> Product Hunt</a>
+          <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'logo.png' %}" width="30px"> Product Hunt</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
