--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class = "container">
-  <div class = "text-center">
-    <h1> Products </h1>
+<div class = "text-center mt-2">
+  <h1> PRODUCTS </h1>
+</div>
+  <div class="mt-3">
+    <form id="searchForm" method="POST" action="{% url 'search' %}">
+      {% csrf_token %}
+        <div class="container">
+          <input type="text" name="search" placeholder="Search" style="width:97%;">
+          <span class="oi oi-magnifying-glass" id="search" style="cursor:pointer"></span>
+        </div>
+    </form>
   </div>
   {% for product in products %}
-  <div class="border border-dark mt-5">
+  <div class="border border-dark mt-3">
     <div class = "row">
       <div class = "col-2">
         <a href="products/{{product.id}}"> <img src = "{{product.icon.url}}" class = "img-fluid" height="200px" width="200px"> </a>
@@ -22,4 +31,11 @@
   </div>
   {% endfor %}
 </div>
+
+<script type="text/javascript">
+    document.getElementById("search").onclick = function(){
+      document.getElementById("searchForm").submit();
+    }
+</script>
+
 {% endblock %}
