--- a/products/templates/products/details.html
+++ b/products/templates/products/details.html
@@ -5,8 +5,8 @@
 	<div class="col-2">
 		<img src="{{product.icon.url}}" height="200px" width="200px" class="img-fluid">
 	</div>
-	<div class="col-10">
-		<h2> <a href="{{product.url}}" target="_blank"> {{product.title}} </a> </h2>
+	<div class="col-10 text-center">
+		<h1> <a href="{{product.url}}" target="_blank"> {{product.title}} </a> </h1>
 	</div>
 </div>
 
